# plot_twister

./: .dockerignore  DOCKER.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  zzz
src/: main.py
src/core/: init_api.py
src/database/: base.py  models.py  repository.py  test_db.py
src/database/migrations/: db_model.txt  reset_db.sql
src/dto/: admin_dto.py  auth_dto.py  frame_dto.py  page_dto.py  project_dto.py  user_dto.py
src/private/admin/: admin.html
src/project_data_models/: frame_model.py  project_model.py
src/routes/: admin_router.py  auth_router.py  frame_router.py  graphic_editor_router.py  page_router.py  project_router.py  user_router.py
src/server/: project_api.txt  project_architecture.txt  server_setup.ps1
src/server/core/: init_api.py
src/server/database/: base.py  database_model.py  repository.py  table_models.py  test_db.py
src/static/: index.css  index.html
src/user_models/: admin_model.py  auth_model.py  user_model.py
tests/: test_admin_access.py  test_admin_model.py  test_auth_model.py  test_frame_model.py  test_frame_update_number.py  test_graphic_editor_model.py  test_page_model.py  test_project_model.py  test_source_data  test_user_model.py
tests/front/: GraphicEditor.test.js  PageList.test.js  TextEditor.test.js  account.test.js  frame-click.test.js  frames-add.test.js  login-register.test.js
tests/models/: run.ps1  test_admin_model.py  test_auth_model.py  test_frame_model.py  test_graphic_editor_model.py  test_page_model.py  test_project_model.py  test_source_data  test_user_model.py
web/: index.html
(+74 files in other folders)
