[project]
name = "plot-twister"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.4",
    "iniconfig==2.3.0",
    "packaging==25.0",
    "pluggy==1.6.0",
    "psycopg2>=2.9.11",
    "pydantic[email]>=2.12.5",
    "pygments==2.19.2",
    "pytest==9.0.2",
    "pytest-mock==3.15.1",
    "python-multipart>=0.0.21",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
]
